@@ -5,6 +5,7 @@
 	* gllib/glvm.h: Improvements.
 	* gllib/glvm-color.h, Makefile.am: New GLVM module for color space
 	conversions.
+	* src/view_area.cpp: Use glvm-color module.
 
 2008-06-26  Martin Lambers <marlam@marlam.de>
 
